--- a/MLP.ipynb
+++ b/MLP.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "181ULuJFxgwPY5M1x8n1Fe1JCsSBjse7e",
-      "authorship_tag": "ABX9TyMXndwpJSedNw4jK1g1ssNQ",
+      "authorship_tag": "ABX9TyORdnS2tAo7zrKNf3LqkTA3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1223,7 +1223,7 @@
         "id": "rpGYG7VM8n3j"
       },
       "source": [
-        "# model 90-125-80-40-1"
+        "model 90-125-80-40-1"
       ]
     },
     {
@@ -1403,7 +1403,7 @@
         "id": "to3kITn4sOCQ"
       },
       "source": [
-        "plot best result"
+        "# plot best result"
       ]
     },
     {
@@ -1690,46 +1690,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5gTT_FE0iLzh"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZeTp5u3CiadA"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "CAGZV5N6ipGs"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PCAD70FckYsz"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-_5jPSlpCEZs"
       },
       "source": [
-        "plot final result"
+        "# plot final comparison plot"
       ]
     },
     {
@@ -1820,25 +1784,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NZH0XcDmi3wI"
+        "id": "G1FSc7L-jVP5"
       },
       "source": [
-        "# New Section"
+        "#**Conclusion** :\n",
+        "#It seems that Classification Network is work better than Regression on this dataset"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BsLkm49phugT"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wouUNWMhh9WB"
+        "id": "8JXAVyhDks8c"
       },
       "source": [
         "# New Section"
